--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "cross-env": "^7.0.3",
     "immer": "^10.1.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
@@ -19,7 +20,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "cross-env REACT_APP_API_URL=http://localhost:3000 react-scripts start",
+    "start:prod": "cross-env REACT_APP_API_URL=https://rsyfaexhi7.execute-api.us-east-1.amazonaws.com/dev react-scripts start",
     "build": "react-scripts build",
+    "build:dev": "cross-env REACT_APP_API_URL=http://localhost:3000 react-scripts build",
+    "build:prod": "cross-env REACT_APP_API_URL=https://rsyfaexhi7.execute-api.us-east-1.amazonaws.com/dev react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
